--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.5.0
+beautifulsoup4==4.11.1
 black==22.3.0
+bs4==0.0.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.1.2
 Django==4.0.4
 flake8==4.0.1
+idna==3.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
@@ -10,6 +15,9 @@ Pillow==9.1.0
 platformdirs==2.5.2
 pycodestyle==2.8.0
 pyflakes==2.4.0
+requests==2.27.1
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
 tomli==2.0.1
 typing_extensions==4.2.0
+urllib3==1.26.9
